Java 17, Spring 6 and add some javadocs